# external_mesa

./: .pick_status.json  Android.common.mk  Android.mk  meson.build  meson_options.txt
android/: Android.mk  mesa3d_cross.mk
src/amd/compiler/: aco_insert_exec_mask.cpp  aco_instruction_selection.cpp  aco_ir.h  aco_register_allocation.cpp  aco_spill.cpp
src/amd/vulkan/: Android.mk  meson.build  radv_android.c  radv_device.c  radv_extensions.py  radv_image.c  radv_instance.c  radv_meta_copy.c  radv_physical_device.c  radv_private.h
src/broadcom/vulkan/: v3dv_device.c  v3dv_private.h
src/c11/: Android.bp
src/compiler/: Android.nir.gen.mk
src/compiler/spirv/: spirv_to_nir.c
src/egl/: meson.build
src/freedreno/: Makefile.sources
src/freedreno/common/: freedreno_devices.h
src/gallium/: Android.mk
src/gallium/auxiliary/: Android.mk  Makefile.sources
src/gbm/: Android.bp
src/intel/: Android.vulkan.mk
src/intel/perf/: gen_perf_query.h
src/intel/shaders/: intel_gfx11_shaders_code.h  intel_gfx125_shaders_code.h  intel_gfx12_shaders_code.h  intel_gfx20_shaders_code.h  intel_gfx8_shaders_code.h  intel_gfx9_shaders_code.h  meson.build
src/intel/vulkan/: anv_android.c  anv_device.c  anv_formats.c  anv_gem.c  anv_instance.c  anv_physical_device.c  anv_private.h
src/loader/: Android.bp  pci_id_driver_map.h
src/mesa/: Android.libmesa_dricore.mk  Android.libmesa_sse41.mk
src/util/: 00-mesa-defaults.conf  Android.bp  disk_cache_os.c  driconf.h  u_debug.h  xmlconfig.c
src/vulkan/: Android.mk
subprojects/: .gitignore
subprojects/llvm/: meson.build
(+155 files in other folders)
